--- a/02-tools.Rmd
+++ b/02-tools.Rmd
@@ -107,35 +107,35 @@ required.
 
 Many tutorials are available in different formats. Here is a [YouTube video
 ``Git and GitHub for Beginners---Crash
-Course''](https: /  / www.youtube.com / watch ? v = RGOj5yH7evk)
-< !--https: /  / www.youtube.com / watch ? v = USjZcfj8yxE).- ->
-The video also covers GitHub, a cloud service for Git. Other similar services
-are, for example, [bitbucket](bitbucket.org) and [GitLab](gitlab.com). A cloud
+Course''](https://www.youtube.com/watch?v=USjZcfj8yxE).
+
+The video also covers [GitHub](https://github.com), a cloud service for Git. Other similar services
+are, for example, [bitbucket](https://bitbucket.org) and [GitLab](https://gitlab.com). A cloud
 service gives you a cloud back up of your work and makes collaboration with
 co - workers easy.
 
 
-There are tools that make learning Git easy.
+There are tools and tutorials that make learning Git easy.
 
-+ Here is a collection of
-[online Git exersices](https: /  / gitexercises.fracz.com)
-that I used for Git training in other courses that I taught.
-+ Here is a game called [`Oh My Git`](https: /  / ohmygit.org), an open
-source game about learning Git !
++ Here is a collection of [online Git exersices](https://gitexercises.fracz.com)
 
++ Here is a game called [`Oh My Git`](https://ohmygit.org), an open
+source game about learning Git!
 
 
 
-### Set Up+Download Git [here](https: /  / git - scm.com / downloads).
-+ Make a GitHub Account [here](https: /  / www.github.com) if you don't have one yet.
+
+### Set Up+Download Git [here](https://git-scm.com/downloads).
++ Make a GitHub Account [here](https://www.github.com) if you don't have one yet.
 + Get started with your GitHub account by following the [help
 page](https://docs.github.com/en/get-started/onboarding/getting-started-with-your-github-account).
-- One important step is the
+
+  - One important step is the
 [set-up](https://docs.github.com/en/get-started/onboarding/getting-started-with-your-github-account#2-setting-up-git).
-- The connection between your local and GitHub repositories needs
-to be [set up only
-once](https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories).
-One easy way is with a personal access token, as illustrated
+  - The connection between your local and GitHub repositories needs
+to be [set up onlyonce](https://docs.github.com/en/get-started/getting-started-with-git/about-remote-repositories).
+
+  - One easy way is with a personal access token, as illustrated
 in a [YouTube video](https://www.youtube.com/watch?v=kHkQnuYzwoo).
 
 
