--- a/6694.bib
+++ b/6694.bib
@@ -5,7 +5,7 @@ volume = {49},
 journal = {The Annals of Statistics},
 number = {1},
 publisher = {Institute of Mathematical Statistics},
-pages = {486 -- 507},
+pages = {486--507},
 keywords = {conformal inference, cross-validation, distribution-free, jackknife, leave-one-out, stability},
 year = {2021},
 doi = {10.1214/20-AOS1965},
