--- a/book.bib
+++ b/book.bib
@@ -36,7 +36,7 @@
   author =	 {Hairston, Maxine and Keene, Michael L},
   year =	 2003,
   edition =	 5,
-  publisher =	 {W. W. Norton & Company}
+  publisher =	 {W. W. Norton \& Company}
 }
 
 @article{jenkins1995write,
