--- a/6694.bib
+++ b/6694.bib
@@ -1,3 +1,15 @@
+@article{ChenChanStenseth2012,
+  Author =	 {Chen, K. and Chan, K.-S. and Stenseth, N. C.},
+  Journal =	 {Journal of the Royal Statistical Society: Series B},
+  Number =	 2,
+  Pages =	 {203--221},
+  Title =	 {Reduced rank stochastic regression with a sparse
+                  singular value decomposition},
+  Volume =	 74,
+  Year =	 2012
+}
+
+
 @article{Foygel2021,
 author = {Rina Foygel Barber and Emmanuel J. Cand{\`e}s and Aaditya Ramdas and Ryan J. Tibshirani},
 title = {{Predictive inference with the jackknife+}},
