--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Advanced Research Writing in Statistics and Data Science"
+title: "Research Writing in Statistics and Data Science"
 author: "Kun Chen, Elizabeth Schifano, Jun Yan"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
