--- a/02-tools.Rmd
+++ b/02-tools.Rmd
@@ -75,9 +75,9 @@ Compare Word and LaTeX
 \left\{\frac{1}{2n}\ | y - X\beta\ | _2^2 + \lambda \ | \beta\ | _1 \right\}
 ```
 
-- Which approach is faster ?
-- Which result looks more professional ?
-- Which is easier to revise and share ?
+- Which approach is faster?
+- Which result looks more professional?
+- Which is easier to revise and share?
 :::
 
 
@@ -209,6 +209,7 @@ in a [YouTube video](https://www.youtube.com/watch?v=kHkQnuYzwoo).
 
 To contribute to an open source project (e.g., our classnotes), use pull
 requests. [Pull requests](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests)
+
 "let you tell others about changes you've pushed to a branch in a repository on
 GitHub. Once a pull request is opened, you can discuss and review the potential
 changes with collaborators and add follow-up commits before your changes are
@@ -285,10 +286,10 @@ document classes can be defined once
 you know more about LaTeX. <!--We focus on `article` here.-->
 
 
-+ The instructions in this section are practiced in a [demo repo](https://github.com/jun-yan/writing-demo) from Professor Jun Yan. 
++ The instructions in this section are practiced in a [demo repo](https://github.com/jun-yan/writing-demo) from Dr. Jun Yan. 
 
 + [Anthony Zeimekakis](https://www.linkedin.com/in/anthony-zeimbekakis/)
-was an undergraduate student who worked with us on a thesis. The
+was an undergraduate student who worked with the authors on a thesis. The
 tex sources, data, and code are in a [GitHub
 repo](https://github.com/azeimbekakis/KS-Test-Thesis), which can be
 used as a template too. This paper was published in [American
@@ -296,7 +297,7 @@ Statistician](https://doi.org/10.1080/00031305.2024.2356095), two
 years after Anthony graduated. Interested students beaware that this
 is a serious commitment.
 
-+ You may also directly download LaTeX templates (zip) here: 
++ You may also directly download two minimal LaTeX templates (zip) here: 
   + [Download LaTeX template for writing a paper](files/Paper_templete.zip)
   + [Download LaTeX template for making a presentation](files/Presentation_templete.zip)
 
@@ -305,7 +306,8 @@ is a serious commitment.
 
 Working efficiently with LaTeX largely depends on the editing environment. 
 Although a plain text editor is sufficient for editing, certain
-tools can make the writing, compiling, and debugging process much smoother.
+tools can make the writing, compiling, and debugging process much smoother. Choosing an editing environment is also a matter of personal preference. 
+
 
 #### Local Editors
 
@@ -381,7 +383,7 @@ be set up and the needed opertations for each target is automated.
 
 
 ::: {.exercise}
-**Trying Different Editors**
+**Trying different editors**
 
 1. If you already have LaTeX installed, open the same `.tex` file in two
    different editors (e.g., Emacs and TeXstudio, or VS Code and RStudio). 
@@ -419,7 +421,7 @@ better and better, it is still helpful if you know the basic about LaTeX.
 Perfect — that will be very engaging for students. You can simulate **realistic LaTeX error messages**, show them in an example block, and then ask students to diagnose what they mean. Here’s a ready-to-drop Rmd block:
 
 ::: {.example}
-**Common LaTeX Error Messages**
+**Common LaTeX error messages**
 
 Here are some typical error messages you might encounter.  
 
@@ -479,7 +481,7 @@ readable.
 
 
 ::: {.example}
-**Cleaning Up Math Expressions in LaTeX**
+**Cleaning pp Math expressions in LaTeX**
 
 Below are some math expressions written poorly in LaTeX.  
 Your task is to (1) identify what’s wrong with each one, and (2) rewrite it
@@ -514,7 +516,7 @@ following the best practices listed above.
 
 
 ::: {.exercise}
-**A Statistically Correct Paragraph with Bad LaTeX**
+**A "correct" paragraph with bad LaTeX**
 
 The following paragraph deliberately violates many LaTeX best practices. Your task is to identify and fix all the issues.
 
@@ -621,12 +623,12 @@ You can drop this directly into your bookdown/LaTeX as an **exercise block**.
 
 
 ::: {.exercise}
-**Fix the Table**
+**Fix the table**
 
-Below is the same descriptive table as before, but typeset 
-with many bad practices.  
-Your task is to identify the issues (at least 8) and then rewrite 
-the table according to professional LaTeX table guidelines.
+Below is a table showing some descriptive statistics of a case-control 
+cohort, but typesetwith many bad practices.Your task is to identify 
+the issues (at least 8) and then rewrite the table according to 
+professional LaTeX table guidelines. Fix all the issues, compile, and check.
 
 ```latex
 \begin{table}[h]
@@ -661,9 +663,9 @@ Age &   &   &   &   \\
 ```
 
 * Overuse of vertical lines `|`.
-* Inconsistent decimal places (e.g., `487.0` vs `1408.00` vs `106 (7.5%)`).
-* Parentheses and percentages formatted inconsistently (`63.7%`, `67.61 %`, `7.5%`).
-* Tiny font (`\tiny`) makes the table unreadable.
+* Inconsistent decimal places.
+* Parentheses and percentages formatted inconsistently.
+* Tiny font makes the table unreadable.
 * Caption is vague and not self-contained.
 * Numbers not aligned by decimal point.
 * Extra zeros (`2280.000`, `135.000`).
@@ -807,7 +809,7 @@ URL = {https://doi.org/10.1214/20-AOS1965}
 
 
 
-### Cross-referencing
+### Cross-Referencing
 
 Define a label for each object and refer to it by its label.
 
